apps/imx/base/imx-brp-bevragen-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  template:
    spec:
      containers:
        - name: imx-brp-bevragen-proxy
          image: imx-brp-bevragen-proxy
          ports:
            - name: http-brpproxy
              containerPort: 5000
